--- a/src/index.css
+++ b/src/index.css
@@ -19,11 +19,11 @@
 
 a {
   font-weight: 500;
-  color: #646cff;
+  color: #1E88E5;
   text-decoration: inherit;
 }
 a:hover {
-  color: #535bf2;
+  color: #3e39d4;
 }
 
 body {
